--- a/build.gradle
+++ b/build.gradle
@@ -37,10 +37,11 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
     testImplementation 'org.springframework.security:spring-security-test'
-
+    testImplementation 'org.mariadb.jdbc:mariadb-java-client'
     //junit5
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    //spring boot starter test에 이미 junit jupiter가 포함 됨
+//    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+//    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 
     //JWT TOKEN
     implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
